2014-04-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* install.php: Now the data of "integria_dbdata.sql" is
	is used always.

	* integria_demo.sql: Deleted some insertions to adapt the
	file to the new reality.

	* operation/incidents/incident_detail.php,
	  integria_dbdata.php: Minor fixes.

2014-04-04  Sancho Lerena <slerena@artica.es>

	* integria_db.sql,
	integria_dbdata.sql: Fixed broken SQL. Updated some 
	version in SQL.

2014-04-04  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* integria_db.sql: Added the tables `tdownload_type`
	and `tdownload_type_file`.

	* integria_dbdata.sql: The base MR value on `tconfig`
	is now 8.

2014-04-03  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* incidents/incident_graph.php,
	  include/functions_graph.php: Bugfixes on the D3 graph.

2014-04-03  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* images/backgrounds,
	  images/backgrounds/tiles.jpg,
	  images/backgrounds/flowers.jpg,
	  images/backgrounds/pandora_4.0.jpg,
	  images/backgrounds/wood.jpg,
	  images/backgrounds/pandora_5.0.png,
	  images/backgrounds/default_4.0.gif,
	  images/backgrounds/grass.jpg,
	  images/backgrounds/wall.jpg: Added files.

2014-04-03  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_graph.php: Added the functions
	"print_activity_calendar" and "graph_ticket_activity_calendar".

	* include/functions_incidents.php: Added a ticket activity
	graph.

2014-04-01  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/invoices/invoice_detail.php: Now the invoice
	PDF is displayed correctly in the language defined in it.

2014-04-01  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* godmode/setup/setup_visual.php: Added an option to
	select a custom image for the login background.
	
	* general/login_page.php: Now a custom image is loaded
	as a login page background if the user has defined it.

2014-04-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	